// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component action negative 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="1wk4vs8-hnqgw2 1wk4vs8-xe265e 1wk4vs8-1qr77c8 1wk4vs8-mjo3f8 1wk4vs8-18jpc09"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-1vrz3gw 1wk4vs8-11hczkh 1wk4vs8-197pp75"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action positive 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="1wk4vs8-hnqgw2 1wk4vs8-lxtrsj 1wk4vs8-1qr77c8 1wk4vs8-mjo3f8 1wk4vs8-15m3xlk"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-3noqo9 1wk4vs8-11hczkh 1wk4vs8-1tthglh"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action primary 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="1wk4vs8-hnqgw2 1wk4vs8-58zsu5 1wk4vs8-1qr77c8 1wk4vs8-mjo3f8 1wk4vs8-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-11hczkh 1wk4vs8-1b07oxx"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action secondary 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="1wk4vs8-hnqgw2 1wk4vs8-8r4mg3 1wk4vs8-1qr77c8 1wk4vs8-mjo3f8 1wk4vs8-14bfgb"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-1wt7l86 1wk4vs8-11hczkh 1wk4vs8-1xgarii"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size lg 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="1wk4vs8-hnqgw2 1wk4vs8-58zsu5 1wk4vs8-1qr77c8 1wk4vs8-1m88kvk 1wk4vs8-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-1n3pgep 1wk4vs8-1b07oxx"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size md 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="1wk4vs8-hnqgw2 1wk4vs8-58zsu5 1wk4vs8-1qr77c8 1wk4vs8-mjo3f8 1wk4vs8-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-11hczkh 1wk4vs8-1b07oxx"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size sm 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="1wk4vs8-hnqgw2 1wk4vs8-58zsu5 1wk4vs8-1qr77c8 1wk4vs8-npzoh9 1wk4vs8-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-1q2dyj6 1wk4vs8-1b07oxx"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size xs 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="1wk4vs8-hnqgw2 1wk4vs8-58zsu5 1wk4vs8-1qr77c8 1wk4vs8-1yhbyhf 1wk4vs8-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-193yier 1wk4vs8-1b07oxx"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant link 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="1wk4vs8-hnqgw2 1wk4vs8-58zsu5 1wk4vs8-q0taf9 1wk4vs8-mjo3f8 1wk4vs8-n2zv0u"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-11hczkh"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant outline 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="1wk4vs8-hnqgw2 1wk4vs8-58zsu5 1wk4vs8-ha1mj1 1wk4vs8-mjo3f8 1wk4vs8-4s28py"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-11hczkh"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant solid 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="1wk4vs8-hnqgw2 1wk4vs8-58zsu5 1wk4vs8-1qr77c8 1wk4vs8-mjo3f8 1wk4vs8-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-11hczkh 1wk4vs8-1b07oxx"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
